# stom12_talon_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  state.json
app/: bot.py  clinic_api.py  config.py  main.py  monitor.py
